Fixing naming convention and added service resource.

--- a/stubs/__app__/config.yml
+++ b/stubs/__app__/config.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   namespace: production
-  name: {{ .name }}-env
+  name: {{ .name }}
 data:
   APP_NAME: "{{ .name }}"
   APP_ENV: "production"
