--- a/stubs/__app__/secret.yml
+++ b/stubs/__app__/secret.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   namespace: production
-  name: {{ .name }}-env
+  name: {{ .name }}
 type: Opaque
 data:
   APP_KEY: ""
