Added support for namespace in values.

--- a/stubs/__app__/config.yml
+++ b/stubs/__app__/config.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: production
+  namespace: {{ .namespace }}
   name: {{ .name }}
 data:
   APP_NAME: "{{ .name }}"
-  APP_ENV: "production"
+  APP_ENV: "{{ .namespace }}"
   APP_DEBUG: "true"
 
   GIT_HOST: "{username}:{password}@github.com"
