--- a/stubs/__app__/values.yml
+++ b/stubs/__app__/values.yml
@@ -1,4 +1,9 @@
 # ------------------------------------------------------------------------------------------------------------
+# Application namespace.
+# ------------------------------------------------------------------------------------------------------------
+namespace: {{ .namespace }}
+
+# ------------------------------------------------------------------------------------------------------------
 # Name of the application.
 # This will be use mostly in every resource of the release to identify.
 # ------------------------------------------------------------------------------------------------------------
@@ -6,7 +11,7 @@ name: {{ .name }}
 
 # ------------------------------------------------------------------------------------------------------------
 # Version of the application.
-# This will be use mostly in every resource of the release to identify.
+# Note: "v" will be always be prefix to avoid unexpected error while deploying artifact.
 # ------------------------------------------------------------------------------------------------------------
 version: {{ .version }}
 
