--- a/stubs/__app__/app.yml
+++ b/stubs/__app__/app.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: production
+  namespace: {{ .namespace }}
   name: {{ .name }}
   labels:
     app: {{ .name }}
