--- a/stubs/__app__/artifact.yml
+++ b/stubs/__app__/artifact.yml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  namespace: production
+  namespace: {{ .namespace }}
   name: artifact-{{ .name }}-{{ .version }}
   labels:
     app: {{ .name }}
@@ -25,7 +25,7 @@ spec:
                 name: {{ .name }}
           env:
             - name: APP_ENV
-              value: "production"
+              value: "{{ .namespace }}"
             - name: BRANCH
               value: "master"
             - name: PROJECTS
@@ -49,7 +49,7 @@ spec:
                 name: {{ .name }}
           env:
             - name: APP_ENV
-              value: "production"
+              value: "{{ .namespace }}"
             - name: PROJECTS
               value: "{{ .name }}"
           volumeMounts:
