--- a/stubs/__app__/disk.yml
+++ b/stubs/__app__/disk.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  namespace: production
+  namespace: {{ .namespace }}
   name: {{ .name }}-{{ .version }}
 spec:
   accessModes:
