--- a/stubs/__app__/secret.yml
+++ b/stubs/__app__/secret.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  namespace: production
+  namespace: {{ .namespace }}
   name: {{ .name }}
 type: Opaque
 data:
