--- a/stubs/__app__/service.yml
+++ b/stubs/__app__/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: production
+  namespace: {{ .namespace }}
   name: {{ .name }}
   labels:
     app: {{ .name }}
