--- a/stubs/docker/caddy/Dockerfile
+++ b/stubs/docker/caddy/Dockerfile
@@ -1,5 +1,6 @@
 FROM thebots/caddy:latest
 
+LABEL app=${PROJECTS}
 LABEL maintainer="Mohammed Mudassir<hello@mudasir.me>"
 
 COPY ./caddy /etc/caddy
