ignoring secret and values plus pvc resource support added.

--- a/stubs/__app__/values.yml
+++ b/stubs/__app__/values.yml
@@ -1,7 +1,7 @@
 # ------------------------------------------------------------------------------------------------------------
 # Application namespace.
 # ------------------------------------------------------------------------------------------------------------
-namespace: {{ .namespace }}
+namespace: default
 
 # ------------------------------------------------------------------------------------------------------------
 # Name of the application.
