Added version default value and added some secret's parameters.

--- a/stubs/__app__/secret.yml
+++ b/stubs/__app__/secret.yml
@@ -5,7 +5,7 @@ metadata:
   name: {{ .name }}
 type: Opaque
 data:
-  APP_KEY: ""
-  DB_PASSWORD: ""
+  APP_KEY: "{{ .app_key }}"
+  DB_PASSWORD: "{{ .db_password }}"
 
 
