--- a/stubs/__app__/values.yml
+++ b/stubs/__app__/values.yml
@@ -36,3 +36,14 @@ git_host: "github.com"
 # Please checkout {{ .name }}/artifact.yml
 # ------------------------------------------------------------------------------------------------------------
 git_namespace: "lumenite"
+
+# ------------------------------------------------------------------------------------------------------------
+# config.yml configuration or any configuration which get replace in anywhere in the release.
+# ------------------------------------------------------------------------------------------------------------
+npm_token: ""
+
+# ------------------------------------------------------------------------------------------------------------
+# secret.yml configuration which needs to be base64 encoded
+# ------------------------------------------------------------------------------------------------------------
+app_key: ""
+db_password: ""
