--- a/stubs/__app__/values.yml
+++ b/stubs/__app__/values.yml
@@ -47,3 +47,9 @@ npm_token: ""
 # ------------------------------------------------------------------------------------------------------------
 app_key: ""
 db_password: ""
+
+# ------------------------------------------------------------------------------------------------------------
+# To push values and secret on s3, it is require to add the details here
+# ------------------------------------------------------------------------------------------------------------
+aws_profile: "default"
+aws_s3_bucket: ""
