Context key added.

--- a/stubs/__app__/values.yml
+++ b/stubs/__app__/values.yml
@@ -1,4 +1,9 @@
 # ------------------------------------------------------------------------------------------------------------
+# Targeting cluster to deploy resources
+# ------------------------------------------------------------------------------------------------------------
+context: default
+
+# ------------------------------------------------------------------------------------------------------------
 # Application namespace.
 # ------------------------------------------------------------------------------------------------------------
 namespace: default
